--- a/src/scenes/footer/footer.css
+++ b/src/scenes/footer/footer.css
@@ -40,7 +40,7 @@
   width: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
+  justify-content: flex-end;
   gap: 0.5vh;
   /* border: 2px solid white; */
 }
@@ -55,9 +55,11 @@ hr {
 }
 
 .footer-logos > img {
-  width: 40px;
-  height: 40px;
+  width: 50px;
+  height: 50px;
   margin-right: 1vw;
+  margin-top: 1vh;
+  margin-bottom: 1vh;
 }
   
 .image-footer {
@@ -66,6 +68,7 @@ hr {
   justify-content: flex-end;
   align-items: center;
   margin-right: 2vw;
+  z-index: 1;
 }
 
 .footer-box > p {
@@ -80,4 +83,12 @@ hr {
   font-family: Arial, Helvetica, sans-serif;
   margin-bottom: 0;
   margin-top: -0.5vh;
+}
+
+.footer-image {
+  /* height: auto; */
+  width: 20%;
+  /* margin-right: -3vw; */
+  border: 2px solid white;
+  border-radius: 50rem;
 }
