--- a/src/scenes/projects/projects.css
+++ b/src/scenes/projects/projects.css
@@ -92,9 +92,13 @@
 
 .content-p h2, p {
     margin: 0 1rem;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family:Arial, Helvetica, sans-serif;
     padding: 0;
     line-height: 1.5;
+}
+
+.content-p > h2 {
+    font-weight: 700;
 }
 
 p {
