--- a/src/scenes/contact/contact.css
+++ b/src/scenes/contact/contact.css
@@ -97,7 +97,7 @@
   .contact-main {
     margin-top: 10rem;
     margin-bottom: 5rem;
-    height: 100vh;
+    height: 150vh;
   }
 
   .contact-sub {
@@ -106,15 +106,22 @@
   }
 
   .contact-gif {
-    width: 80%;
+    width: 70%;
+    height: 40%;
+  }
+
+  .contact-gif > img {
+    width: 50%;
   }
 
   .contact-info {
-    width: 80%;
+    width: 70%;
+    justify-content: center;
+    align-items: center;
   }
 
   .contact-form {
     width: 100%;
-    height: 90%;
+    height: 70%;
   }
 }
