--- a/src/scenes/footer/footer.css
+++ b/src/scenes/footer/footer.css
@@ -92,3 +92,35 @@ hr {
   border: 2px solid white;
   border-radius: 50rem;
 }
+
+@media only screen and (max-width: 1100px) {
+
+  .footer-main{
+    height: 80vh;
+  }
+
+  .box {
+    flex-direction: column-reverse;
+    /* gap: 3vh; */
+    /* width: 100%; */
+  }
+
+  .footer-box {
+    width: 100%;
+    text-align: center;
+  }
+
+  .footer-logos {
+    align-items: center;
+    justify-content: center;
+  }
+
+  .image-footer {
+    justify-content: center;
+    align-items: center;
+  }
+
+  .footer-box > img {
+    width: 30%;
+  }
+}
