--- a/src/scenes/Hero/hero.css
+++ b/src/scenes/Hero/hero.css
@@ -216,7 +216,7 @@
   }
 
   .my-image {
-    position: absolute;
+    position: relative;
     width: 100%;
     height: 40%;
     align-items: flex-end;
@@ -226,5 +226,26 @@
 @media only screen and (max-height: 340px) {
   .my-image {
     display: none;
+  }
+}
+
+@media only screen and (max-width : 450px ) {
+  .hero-main{
+    height: 100vh;
+  }
+
+  .hero-me{
+    justify-content: center;
+    align-items: center;
+  }
+
+  .my-image{
+    height: 80%;
+    width: 100%;
+  }
+
+  .heading {
+    justify-content: center;
+    align-items: center;
   }
 }
