--- a/src/scenes/projects/projects.css
+++ b/src/scenes/projects/projects.css
@@ -180,3 +180,17 @@ button {
         left: 0.5rem;
     }
 }
+
+@media only screen and (max-width: 450px ) {
+    .image-project > img {
+        width: 90%;
+    }
+
+    .button-container {
+        width: 90%;
+    }
+
+    button {
+        width: 80%;
+    }
+}
