--- a/src/scenes/about/about.css
+++ b/src/scenes/about/about.css
@@ -193,7 +193,7 @@
     }
 
     .ed-section{
-        width: 90%;
+        width: 100%;
         height: 20%;
     }
 
@@ -211,5 +211,15 @@
 
     .card > img {
         width: 80%;
+        margin-left: 2vw;
+    }
+
+    .aboutt {
+        position: relative;
+        left: -1.5rem;
+    }
+
+    .ed-info > h2{
+        font-size: 25px;
     }
 }
