--- a/src/scenes/projects/projects.css
+++ b/src/scenes/projects/projects.css
@@ -184,7 +184,7 @@ button {
 
 @media only screen and (max-width: 450px ) {
     .image-project > img {
-        width: 90%;
+        width: 95%;
     }
 
     .button-container {
@@ -193,5 +193,9 @@ button {
 
     button {
         width: 80%;
+    }
+
+    .ras {
+        font-size: 30px;
     }
 }
