--- a/src/scenes/projects/projects.css
+++ b/src/scenes/projects/projects.css
@@ -121,7 +121,7 @@ h2 {
 }
 
 button {
-    width: 25%;
+    width: 100%;
     padding: 12px;
     border-radius: 10px;
     background-color: dodgerblue;
@@ -189,11 +189,13 @@ button {
     }
 
     .button-container {
-        width: 90%;
+        width: 100%;
+        justify-content: center;
+        align-items: center;
     }
 
     button {
-        width: 80%;
+        width: 100%;
     }
 
     .ras {
