--- a/src/scenes/Hero/hero.css
+++ b/src/scenes/Hero/hero.css
@@ -51,7 +51,7 @@
   /* margin-top: 10vh;
     margin-left: 10vw; */
     margin-right: 0;
-    margin-top: 4vh;
+    margin-top: -2vh;
     margin-bottom: 1vh;
   font-size: 7rem;
 }
@@ -244,7 +244,11 @@
   }
 
   .my-name {
-    font-size: 40px;
+    font-size: 30px;
+  }
+
+  .name-animated {
+    font-size: 25px;
   }
 
   .bio {
@@ -262,6 +266,11 @@
 
   .hero-me {
     display: none;
+  }
+
+  .email {
+    display: inline;
+    text-decoration: underline;
   }
 
   .heading {
