added loading animation - react spinners

--- a/src/scenes/about/about.css
+++ b/src/scenes/about/about.css
@@ -173,6 +173,10 @@
         margin-left: 10vw;
     }
 
+.aboutt {
+    margin-left: -2rem;
+}
+
     .ed-info > h2 {
         margin-left: 5vw;
     }
