--- a/src/scenes/Hero/hero.css
+++ b/src/scenes/Hero/hero.css
@@ -53,7 +53,7 @@
     margin-right: 0;
     margin-top: -2vh;
     margin-bottom: 1vh;
-  font-size: 7rem;
+    font-size: 7rem;
 }
 
 .name-container {
@@ -75,6 +75,11 @@
   font-size: 3rem;
   margin-top: 5vh;
   /* margin-left: -0.5vw; */
+}
+
+.my-name {
+  color: #e5e7eb;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .name-animated {
