--- a/src/scenes/contact/contact.css
+++ b/src/scenes/contact/contact.css
@@ -62,16 +62,30 @@
   flex-direction: column;
 }
 
-.contact-form label {
-  margin-bottom: 0.5rem;
+.contact-form input {
+  height: 2.5rem;
+}
+
+placeholder {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .contact-form input,
 .contact-form textarea {
-  padding: 0.5rem;
-  margin-bottom: 1rem;
-  border-radius: 0.5rem;
+  border-width: 1px;
+  border-style: solid;
+  border-radius: 0.375rem; /* 6px */
+  padding-left: 1rem;
+
+  /* Focus styles */
+  outline: none;
+  border-color: #e2e8f0; /* Default border color */
+  margin-bottom: 2vh;
+
+  /* Focus border color */
+  &:focus {
+    border-color: #4299e1; /* Blue-500 color code */
+  }
 }
 
 .contact-form input[type="submit"] {
