--- a/src/scenes/footer/footer.css
+++ b/src/scenes/footer/footer.css
@@ -24,6 +24,7 @@
     width: 100%;
     display: flex;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
   
   .bottom-box {
@@ -33,6 +34,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: Arial, Helvetica, sans-serif;
   }
 
 .footer-box {
@@ -43,6 +45,7 @@
   justify-content: flex-end;
   gap: 0.5vh;
   /* border: 2px solid white; */
+  font-family: Arial, Helvetica, sans-serif;
 }
   
 hr {
@@ -74,6 +77,7 @@ hr {
 .footer-box > p {
   margin-left: 0;
   color: #e5e7eb;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .footer-box > h1 {
