--- a/src/scenes/about/about.css
+++ b/src/scenes/about/about.css
@@ -15,18 +15,18 @@
     /* border: 1px solid #e5e7eb; */
     justify-content: center;
     align-items: center;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .heading > h1 {
     color: #e5e7eb;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 2rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 3rem;
 }
 
 .heading > h2 {
     color: #e5e7eb;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 1.5rem;
 }
 
@@ -120,7 +120,7 @@
 .ed-info > h2, h4, p{
     color: #e5e7eb;
     margin-left: 1rem;
-    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .ed-info > h2 {
