--- a/src/scenes/contact/contact.css
+++ b/src/scenes/contact/contact.css
@@ -68,9 +68,9 @@
 
 .contact-form input,
 .contact-form textarea {
-  border-width: 1px;
+  border-width: 1.5px;
   border-style: solid;
-  border-radius: 0.375rem; /* 6px */
+  border-radius: 0.5rem;
   padding-left: 1rem;
 
   /* Focus styles */
