--- a/src/scenes/projects/projects.css
+++ b/src/scenes/projects/projects.css
@@ -121,7 +121,7 @@ h2 {
     gap: 1vw;
 }
 
-button {
+/* button {
     width: 100%;
     padding: 12px;
     border-radius: 10px;
@@ -135,11 +135,61 @@ button {
     transition: background-color 0.3s ease;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     background: linear-gradient(to bottom, dodgerblue, blue);
-  }
+  } */
   
   /* Hover Effect Styling */
-  button:hover {
+  /* button:hover {
     background-color: #3182ce;
+  } */
+
+  button {
+    /* font-size: 17px; */
+    background: transparent;
+    border: none;
+    padding: 1em 1em;
+    color: #ffedd3;
+    /* text-transform: uppercase; */
+    position: relative;
+    transition: 0.5s ease;
+    cursor: pointer;
+  }
+  
+  button::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 2px;
+    width: 0;
+    background-color: dodgerblue;
+    transition: 0.3s ease;
+  }
+  
+  button:hover {
+    color: #1e1e2b;
+    transition-delay: 0.5s;
+  }
+  
+  button:hover::before {
+    width: 100%;
+  }
+  
+  button::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 0;
+    width: 100%;
+    background-color: dodgerblue;
+    transition: 0.4s ease;
+    z-index: -1;
+  }
+  
+  button:hover::after {
+    height: 100%;
+    transition-delay: 0.4s;
+    color: aliceblue;
   }
 
 @media only screen and (max-width: 1100px) {
