--- a/src/scenes/about/about.css
+++ b/src/scenes/about/about.css
@@ -179,12 +179,6 @@
 
 }
 
-@media only screen and (max-width: 1100px) {
-    .content-skills {
-        width: 80%;
-    }
-}
-
 @media only screen and (max-width : 450px ) {
 
     .content-skills{
@@ -200,6 +194,7 @@
     .ed-logo > img {
         width: 90%;
         height: 80%;
+        margin-left: 1rem;
     }
 
     .paras {
