--- a/src/scenes/navbar/navbar.css
+++ b/src/scenes/navbar/navbar.css
@@ -68,6 +68,10 @@
     transition: all 100ms ease-in;
     color: dodgerblue;
 }
+
+.item-nav:focus {
+    color: dodgerblue;
+}
   
 @media only screen and (max-width : 1355px) {
 
