--- a/src/scenes/navbar/navbar.css
+++ b/src/scenes/navbar/navbar.css
@@ -72,6 +72,56 @@
 .item-nav:focus {
     color: dodgerblue;
 }
+
+/* Add styles for the modal */
+/* navbar.css */
+
+/* Add styles for the modal */
+.modal {
+    position: fixed;
+    top: 6rem;
+    right: 1rem;
+    width: 15rem;
+    height: 20rem;
+    border-radius: 2rem;
+    background-color: rgba(255, 255, 255, 0.9); /* White semi-transparent background */
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Ensure it's above other content */
+  }
+  
+  /* Add styles for close icon */
+  .modal-close {
+    position: absolute;
+    top: 0.5rem;
+    right: 0.5rem;
+    cursor: pointer;
+  }
+  
+  .modal ul {
+    list-style-type: none; /* Remove bullet points */
+    padding: 0; /* Remove default padding */
+  }
+  
+  .modal li {
+    margin-bottom: 2rem;
+    margin-top: 2rem; /* Add some spacing between list items */
+  }
+  
+  /* Add styles for modal links */
+  .modal a {
+    color: black; /* Change link color to black */
+    text-decoration: none;
+    font-size: 1.4rem;
+  }
+  
+  /* Add hover effect for modal links */
+  .modal a:hover {
+    text-decoration: underline;
+  }
+  
   
 @media only screen and (max-width : 1355px) {
 
