--- a/src/scenes/navbar/navbar.css
+++ b/src/scenes/navbar/navbar.css
@@ -8,11 +8,10 @@
     align-items: center;
     background-color: rgba(15, 23, 42, 0.9);
     backdrop-filter: blur(10px);
-    z-index: 1000; /* Ensure it stays above other elements */
+    z-index: 1000;
 }
 
 .logo-nav {
-    /* border: 2px solid black; */
     width: 30%;
     height: 100%;
     display: flex;
@@ -41,7 +40,6 @@
 }
 
 .links-nav {
-    /* border: 2px solid black; */
     width: 70%;
     height: 100%;
     display: flex;
@@ -73,23 +71,19 @@
     color: dodgerblue;
 }
 
-/* Add styles for the modal */
-/* navbar.css */
-
-/* Add styles for the modal */
 .modal {
     position: fixed;
     top: 6rem;
     right: 1rem;
-    width: 15rem;
+    width: 12rem;
     height: 20rem;
     border-radius: 2rem;
-    background-color: rgba(255, 255, 255, 0.9); /* White semi-transparent background */
+    background-color: #e5e7eb; 
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Ensure it's above other content */
+    z-index: 1000;
   }
   
   /* Add styles for close icon */
@@ -101,25 +95,30 @@
   }
   
   .modal ul {
-    list-style-type: none; /* Remove bullet points */
-    padding: 0; /* Remove default padding */
+    list-style-type: none; 
+    padding: 0;
   }
   
   .modal li {
     margin-bottom: 2rem;
     margin-top: 2rem; /* Add some spacing between list items */
   }
+
+  .modal .item-nav {
+    text-decoration: none;
+    letter-spacing: 3px;
+  }
   
   /* Add styles for modal links */
   .modal a {
     color: black; /* Change link color to black */
-    text-decoration: none;
     font-size: 1.4rem;
   }
   
   /* Add hover effect for modal links */
   .modal a:hover {
     text-decoration: underline;
+    text-decoration: none;
   }
   
   
